# nam-juce

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  namJUCE.jucer
Assets/: CMakeLists.txt
Source/: AssetManager.h  CMakeLists.txt  DoublerProcessor.h  EqEditor.cpp  EqEditor.h  EqProcessor.cpp  EqProcessor.h  MyLookAndFeel.h  NamEditor.cpp  NamEditor.h  NeuralAmpModeler.cpp  NeuralAmpModeler.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TopBarComponent.cpp  TopBarComponent.h  WebComponent.h  architecture.hpp
Source/PresetManager/: CMakeLists.txt  PresetManager.cpp  PresetManager.h  PresetManagerComponent.cpp  PresetManagerComponent.h
